RESOLVED FIXED308926
[GStreamer][WebRTC][1.28] imported/w3c/web-platform-tests/webrtc/simulcast/rid-manipulation.html fails
https://bugs.webkit.org/show_bug.cgi?id=308926
Summary [GStreamer][WebRTC][1.28] imported/w3c/web-platform-tests/webrtc/simulcast/ri...
Philippe Normand
Reported 2026-03-01 05:15:39 PST
0:00:00.793142013 703774 703830 INFO webrtcbin gstwebrtcbin.c:6682:_set_description_task:<webkit-webrtcbin-1> Attempting to set local answer in the have-remote-offer state 0:00:00.793217581 703774 703830 WARN webrtcbin gstwebrtcbin.c:7076:_set_description_task:<webkit-webrtcbin-1> returning error: media 0 is missing or contains an empty 'ice-ufrag' attribute 0:00:00.793229134 703774 703830 DEBUG webkitwebrtcendpoint GStreamerMediaEndpoint.cpp:1132:operator():<webkit-webrtcbin-1> local description reply: 2 application/x-gst-promise, error=(GError)NULL; 0:00:00.793236083 703774 703830 ERROR webkitwebrtcendpoint GStreamerMediaEndpoint.cpp:1138:operator():<webkit-webrtcbin-1> Unable to set description, error: media 0 is missing or contains an empty 'ice-ufrag' attribute
Attachments
Philippe Normand
Comment 1 2026-03-29 04:06:13 PDT
EWS
Comment 2 2026-04-06 05:07:29 PDT
Committed 310639@main (f2e935e81d2d): <https://commits.webkit.org/310639@main> Reviewed commits have been landed. Closing PR #61611 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-06 05:08:13 PDT
Note You need to log in before you can comment on or make changes to this bug.