[GStreamer][WebRTC][1.28] imported/w3c/web-platform-tests/webrtc/simulcast/rid-manipulation.html fails https://bugs.webkit.org/show_bug.cgi?id=308926

Reviewed by Xabier Rodriguez-Calvar.

Since GStreamer 1.28 the H.264 profiles are more thoroughly checked in the SDP. Without advertizing
the constrained-baseline profile with level 3.1 in our offers and answers the rid-manipulation.html
would fail to negotiate its munged SDP values.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::fillVideoRtpCapabilities):

Canonical link: https://commits.webkit.org/310639@main